# Web-Weather-Dashboard

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test21361018
.github/workflows/: main.yml  mypy.yml  pytest.yml  sphinx.yml
_sources/: index.rst.txt
_sources/source/: modules.rst.txt  web_weather_dashboard.rst.txt
docs/: conf.py  index.rst
source/: modules.html  web_weather_dashboard.html
src/web-weather-dashboard/: weather_api.py
src/web_weather_dashboard/templates/: index.html
