[tool.poetry]
name = "web-weather-dashboard"
version = "0.1.0"
description = ""
authors = ["charliemaxh <cmaxholmes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.6"
pytest = "^8.3.3"
mypy = "^1.11.2"
sphinx = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
